--- a/kbk-react/src/components/Location.css
+++ b/kbk-react/src/components/Location.css
@@ -18,6 +18,7 @@ p {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     max-width: 3000px;
     align-items: center;
     background-color: white;
