finish timeline main section

--- a/kbk-react/src/components/About.css
+++ b/kbk-react/src/components/About.css
@@ -13,6 +13,7 @@
     font-size: 24px;
     line-height: 29.05px;
     transform: translateY(-20%);
+    padding-left: 50px;
 }
 
 .timelineIcon {
@@ -23,21 +24,8 @@
     border-radius: 50%;
     left: -1px;
     transform: translateX(-50%);
-    top: 1px;
     background-color: white;
 }
-/* .timelineIcon0{
-    top: 46px;
-}
-.timelineIcon1{
-    top: 262px;
-}
-.timelineIcon2{
-    top: 478px;
-}
-.timelineIcon3{
-    top: 821px;
-} */
 
 .timelineContainer {
     margin: 0 auto;
@@ -54,13 +42,15 @@
 .timeline{
     background-color: black;
     width: 2px;
-    height: 754px;
+    height: 753px;
 }
 .timelineImages{
+    display: flex;
+    flex-direction: column;
+    gap: 133px;
 }
 .timelineItems {
     display: flex;
-    height: ;
     flex-direction: column;
     justify-content: space-between;
 }
