--- a/kbk-react/src/parts/PopoutMarker.css
+++ b/kbk-react/src/parts/PopoutMarker.css
@@ -20,27 +20,41 @@ p {
 
 #detailed {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+    padding-bottom: 10px;
     z-index: 2;
-    background-color: cyan;
-    top: -240px;
-    left: -130px;
+    background-color: white;
+    bottom: 20px;
+    transform: translate(-50%,  0%);
+    border-radius: 7px;
+}
+
+#detailed p {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 #learnmore {
     display: inline-flex;
-    column-gap: 10px;
+    column-gap: 6px;
     align-items: center;
     color: var(--fontColor_Medium);
-    font-size: 18px;
 }
 
 #learnmore p {
+    font-size: 18px;
     color: var(--fontColor_Medium);
 }
 
 #pin {
     position: absolute;
+    width: 36px;
+    height: 36px;
+    bottom: 0px;
+    transform: translate(-50%,  0%);
     z-index: 1;
     color: red;
-    font-size: 36px;
 }
