--- a/kbk-react/src/components/Location.css
+++ b/kbk-react/src/components/Location.css
@@ -62,12 +62,14 @@ p {
     padding: 3%;
 }
 
-#map-image {
-    background: url("../images/map.png"); /* set map as background image */
-    box-sizing: border-box;
-    background-size: contain;
-    width: 100%;
-    height: 100%;
+#pin {
+    position: absolute;
+    width: 36px;
+    height: 36px;
+    bottom: 0px;
+    transform: translate(-50%,  0%);
+    z-index: 1;
+    color: red;
 }
 
 .ellipse {
