--- a/kbk-react/src/index.css
+++ b/kbk-react/src/index.css
@@ -106,7 +106,7 @@ code {
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 60vh;
+  height: 70vh;
   z-index: 1;
   background-color: white;
   margin: 0;
@@ -126,25 +126,34 @@ code {
 
 .mission-box {
   width: 30vw;
-  margin: -2.5em;
   padding: 0;
 
 }
 
 .mission .mission-box p {
   font-size: 1.5em;
+  margin-top: -1em;
 }
 
 .circle {
-  width: 60vw;
-  height: 80vh;
+  width: 70vw;
+  height: 90vh;
   position: absolute;
-  bottom: -25%;
+
+}
+
+.mission-group {
+  width: 70vw;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .stats {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   display: flex;
 }
 
@@ -152,6 +161,9 @@ code {
   width: 33.333%;
   height: 100%;
   background-color: #FF6B00;
+  display: flex;
+  flex-direction: column;
+
 }
 
 #statA {
@@ -165,4 +177,32 @@ code {
 #statC {
   background-color: #FF7253;
   ;
+}
+
+.stat-title {
+  color: white;
+  font-size: 3em;
+  margin-top: 15%;
+  font-weight: 700;
+}
+.stat-content {
+  padding: 5%;
+  color: white;
+  font-size: 1.45em;
+}
+.main-stat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+}
+
+.main-stat-group {
+  padding: 10%;
+  
+}
+
+.main-stat-group p {
+  font-size: 2em;
 }
