Complete ContactUs page styling

--- a/kbk-react/src/components/ContactUs.css
+++ b/kbk-react/src/components/ContactUs.css
@@ -24,7 +24,8 @@ h1 {
   border-radius: 50%;
 }
 
-span {
+span,
+label {
   font-weight: 400;
   size: 24px;
   line-height: 29.05px;
@@ -36,6 +37,7 @@ span {
   align-items: flex-start;
   grid-row: 2 / 3;
   grid-column: 1 / 2;
+  justify-content: center;
 }
 
 .social-media {
@@ -49,4 +51,67 @@ span {
 .social-media img {
   width: 173px;
   height: 111px;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control label {
+  align-self: flex-start;
+}
+
+form {
+  display: grid;
+  grid-row: 3 / 4;
+  grid-column: 1 / 4;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto 1fr;
+  grid-column-gap: 4rem;
+  grid-row-gap: 1rem;
+}
+
+.first-name {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+.last-name {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.email {
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
+}
+
+.message {
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
+}
+
+textarea#message {
+  resize: none;
+  height: 271px;
+}
+
+button#submit {
+  background-color: #ff6b00;
+  color: white;
+  font-weight: 500;
+  size: 24px;
+  line-height: 29.05px;
+  border: none;
+  cursor: pointer;
+  width: 287px;
+  height: 49px;
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
+  justify-self: right;
+}
+
+input textarea {
+  border: 1px solid black;
 }
