--- a/kbk-react/src/components/ContactUs.css
+++ b/kbk-react/src/components/ContactUs.css
@@ -22,6 +22,7 @@ h1 {
 .ellipse {
   background-color: #f5f5f5;
   border-radius: 50%;
+  position: static;
 }
 
 span,
@@ -46,6 +47,7 @@ label {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   align-items: center;
+  justify-content: center;
 }
 
 .social-media img {
@@ -90,6 +92,7 @@ form {
 .message {
   grid-row: 2 / 3;
   grid-column: 1 / 4;
+  z-index: 2;
 }
 
 textarea#message {
@@ -114,4 +117,27 @@ button#submit {
 
 input textarea {
   border: 1px solid black;
+}
+
+#ellipse-9 {
+  width: 117px;
+  height: 117px;
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
+  justify-self: right;
+}
+
+#ellipse-11 {
+  width: 201px;
+  height: 201px;
+  grid-row: 2 / 3;
+  grid-column: 3 / 4;
+  justify-self: center;
+}
+
+#ellipse-12 {
+  grid-row: 5 / 6;
+  grid-column: 1 / 2;
+  width: 155px;
+  height: 155px;
 }
