--- a/kbk-react/src/components/Testimonials.css
+++ b/kbk-react/src/components/Testimonials.css
@@ -41,12 +41,14 @@
   
   .testimonial-title {
     font-size: 20px;
-    font-weight: bold;
-    margin: 0 0 10px 0;
+    font-family: 'Inter', sans-serif;
+    font-weight: bolder;
+    margin: 0 0 1px 0;
     /*color: #d14b28;  Adjust color to match the design */
   }
   
   .testimonial-text {
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #666;
