--- a/kbk-react/src/components/Testimonials.css
+++ b/kbk-react/src/components/Testimonials.css
@@ -73,13 +73,27 @@
     background-position: center;
     margin-top: 20px;
   }
+
+  testimonial-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto 20px auto;
+    display: block;
+  }
+
+  .ribbon-right{
+    text-align: right;
+  }
+  
+  .ribbon-left {
+    text-align: left;
+  }
   
   @media (max-width: 768px) {
-    .testimonials {
-      padding: 10px;
-    }
-    .testimonials-header h2 {
-      font-size: 20px;
+    /* Styles for mobile view */
+    .testimonial-image {
+      margin: 10px 0;
     }
   }
   
