--- a/kbk-react/src/components/Testimonials.css
+++ b/kbk-react/src/components/Testimonials.css
@@ -65,21 +65,10 @@
   text-align: right;
 }
 
-  .testimonial-decor {
-    height: 20px; /* Adjust as needed */
-    width: 100%; /* Adjust as needed */
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-top: 20px;
-  }
+  .testimonial-image {
+    height: 155px;
+    width: 280px;
 
-  testimonial-image {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto 20px auto;
-    display: block;
   }
 
   .ribbon-right{
