--- a/kbk-react/src/index.css
+++ b/kbk-react/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Bebas+Neue&family=Inter&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -205,4 +206,162 @@ code {
 
 .main-stat-group p {
   font-size: 2em;
+}
+
+
+.gallery {
+  display: flex;
+  width: 100%; /* Adjust the width to fit the container */
+  height: 927px;
+}
+
+.gallery-header {
+  padding-bottom: 20px;
+}
+
+.gallery-link {
+  text-decoration: none;
+  color: #5B5B5B;
+  font-size: 30px;
+}
+
+.gallery .col{
+  width: 50%;
+}
+
+.gallery .col-left{
+  width: 100%;
+}
+
+.gallery .image-gallery{
+  display: flex;  
+  flex-wrap: wrap;
+  width:100% ;
+  align-items: center;
+}
+
+.image-gallery img{
+  max-width: 400px;
+}
+
+.howItWorks {
+  height: 830px;
+  display: flex;  
+  flex-wrap: wrap;
+  font-family: 'Inter', sans-serif;
+}
+
+.howItWorks .col-text{
+  width: 50%;
+  text-align: left;
+  padding-top: 90px;
+}
+
+.col-text h1{
+  font-size: 44px;
+  margin-top: -37px;
+}
+
+.col-text h2{
+  font-size: 50px;
+  
+}
+.col-left p{
+  font-size: 24px;
+}
+
+.col-text .kidsHeader2{
+  padding-left: 183px !important;
+}
+.col-text .kidsHeader3{
+  padding-left: 146px !important;
+}
+.col-text .kidsText{
+  padding-left: 203px !important;
+  padding-right: 97px;
+}
+.col-text .kidsText2{
+  padding-left: 180px !important;
+  padding-right: 97px;
+}
+
+.howItWorks .col-img{
+  padding-top: 200px;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.howItWorks .col-img img{
+  max-width: 560px;
+  max-height: 326px;
+}
+
+.ourPartners {
+  padding: 24px;
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.partners {
+  padding-top: 100px;
+  flex: 0.5; 
+  font-size: 30px;
+  justify-content: left;
+}
+
+
+.partnersHeader {
+  font-size: 2em;
+  text-align: left;
+  margin-bottom: 10px !important;
+  
+}
+
+@media screen and (max-width: 800px) {
+  .partnersHeader {
+      font-size: 1.5em; /* Decrease font size for smaller screens */
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .partnersHeader {
+      font-size: 1.75em; /* Further decrease font size for even smaller screens */
+  }
+}
+
+.wrap-grid {
+  flex: 3; 
+  display: flex;
+}
+
+.wrap-grid img{
+  max-width: 90%;
+  height: auto;
+  width: auto\9; /* ie8 */
+  padding-left:10px;
+  padding-right:10px;
+}
+
+.container{
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  padding-bottom: 60px;
+}
+
+.divider {
+  width: 680px;
+  height: 0px;
+  border: 1px solid #7B7B7B;
+  border-radius: 25px;
+}
+
+.partnersDivider {
+  width: 240px;
+  height: 0px;
+  border: 1px solid #7B7B7B;
+  border-radius: 25px;
+  
 }
