--- a/kbk-react/src/components/About.css
+++ b/kbk-react/src/components/About.css
@@ -1,3 +1,38 @@
+.header{
+    display: flex;
+    flex-direction: column;
+}
+#about-title{
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 6rem;
+}
+
+.about-text{
+    font-size: 20px;
+    font-weight: 600;
+    color: black;
+
+}
+
+.about-disp-box{
+    background-image: url(../images/about-bg.png);
+    width: 90%;
+    height: 70vh;
+    position: relative;
+    text-wrap: wrap;
+    margin: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.about-text-box{
+    width: 58%;
+    margin: auto;
+    padding: none;
+}
+
+
 .image1 {
     width: 319px;
     height: 319px;
@@ -38,13 +73,14 @@
     padding-bottom: 127px;
 }
 .timelineHeader {
-    margin: 0 auto;
-    height: 235px;
-    width: 1512px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .timeline{
-    background-color: black;
+    background-color: black !important; 
     width: 2px;
     height: 753px;
 }
@@ -66,15 +102,13 @@
 .headerText {
     font-weight: 400;
     font-size: 36px;
-    line-height: 43.57px;
-    letter-spacing: 5%;
-    padding: 119px 0 0 204px;
+    margin-top: 4%;
+
 }
 
 .underline {
     position: relative;
-    left: 195px;
-    top: -70px;
-    width: 225px;
-}
+    width: 20%;
+    margin-top: -6%;
 
+}
