--- a/kbk-react/src/components/Team.module.css
+++ b/kbk-react/src/components/Team.module.css
@@ -21,10 +21,9 @@
   }
   
   .headerText {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     color: rgb(0, 0, 0);
     margin: 0;
     z-index: 10;
@@ -32,7 +31,8 @@
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-weight: 800;
+    font-size: 2em;
+    font-weight: 700;
   }
   
   .additionalImageContainer {
