--- a/kbk-react/src/styles/Location.css
+++ b/kbk-react/src/styles/Location.css
@@ -43,7 +43,6 @@
   }
   
   #map {
-    /*height: calc(74vw * 0.546);  /* backup for js dynamic sizing (ratio from figma) */
     width: 74%;
     align-items: center;
     justify-content: center;
@@ -55,14 +54,8 @@
   }
   
   #map-image {
-    /*background: url("../images/map.png"); /* set map as background image */
-    /* box-sizing: border-box; */
-    /* background-size: contain; */
-    /* background-size: cover;  */
-    /* width: 100%;
-    height: 100%; */
-    width: 1386px;
-    height: 700px;
+    width: 4700px;
+    height: 1800px;
   }
   
   .ellipse {
@@ -76,7 +69,6 @@
     width: 101px;
     height: 101px;
   
-    /* change */
     top: 653px;
     left: 1400px;
   }
@@ -85,7 +77,6 @@
     width: 265px;
     height: 265px;
   
-    /* change */
     top: 1319px;
     left: -49px;
   }
@@ -94,7 +85,6 @@
     width: 133px;
     height: 133px;
   
-    /* change */
     top: 1156px;
     left: 125px;
   }
@@ -103,49 +93,47 @@
     width: 205px;
     height: 205px;
   
-    /* change */
     top: 1072px;
     left: 1337px;
   }
   
   .marker {
-    /* max-width: 31.5px;
-    max-height: 45px; */
     position: relative;
     display: inline;
     align-items: center;
   }
+
+  .marker-image {
+    transform: translateX(-50%);
+    width: 26px;
+    height: 37px;
+  }
   
   #toronto {
-    /* left: -4%;
-    top: 41%; */
-    left: -10%;
-    top: 41%;
+    left: -139px;
+    top: 822px;
   }
 
   #london {
-    /* left: -43%;
-    top: 77%; */
-    left: -50%;
-    top: 77%;
+    left: -734px;
+    top: 1105px;
   }
 
-  #stcatherines {
-    left: -12%;
-    top: 69%;
+  #stcatharines {
+    left: -147px;
+    top: 1043px;
   }
   
   #guelph {
-    left: -35%;
-    top: 47%;
+    left: -480px;
+    top: 870px;
   }
 
   #kingston {
-    left: 38%;
-    top: 9%;
+    left: 648px;
+    top: 578px;
   }
   
-
   .popup {
     width: 334px;
     height: 233px;
@@ -161,12 +149,12 @@
     transform: translateX(-50%) translateY(-30%);
   }
 
-  .school-image {
+  .popup-image {
     height: 75.5%;
     width: 100%;
   }
   
-  .school-title {
+  .popup-title {
     color: black;
     font-weight: 400;
     size: 24px;
@@ -190,34 +178,9 @@
 
   @media screen and (max-width: 900px) {
     .popup {
-      width: 160px;
-      height: 140px;
+      width: 180px;
+      height: 150px;
       transform: translateX(-50%) translateY(-50%);
-    }
-
-    #toronto {
-      left: -10%;
-      top: 44%;
-    }
-  
-    #london {
-      left: -49%;
-      top: 80%;
-    }
-  
-    #stcatherines {
-      left: -11%;
-      top: 72%;
-    }
-    
-    #guelph {
-      left: -32%;
-      top: 50%;
-    }
-  
-    #kingston {
-      left: 41%;
-      top: 12%;
     }
 
   }
